// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ArticleListItem tests rendered correctly 1`] = `
<div>
  <li
    class="container"
  >
    <article
      class="article"
    >
      <header
        class="header"
      >
        <img
          alt="The Statue of Liberty's torch heads to new museum"
          class="image"
          src="https://cdn.cnn.com/cnnnext/dam/assets/181122102925-statue-of-liberty-crown-super-169.jpg"
        />
        <h2
          class="title"
        >
          <a
            class="link"
            href="/articlelist/181122102925-statue-of-liberty-crown"
          >
            The Statue of Liberty's torch heads to new museum
          </a>
        </h2>
      </header>
      <div
        class="wrapper"
      />
      <button
        class="button"
      >
        Show more
      </button>
    </article>
  </li>
</div>
`;

exports[`ArticleListItem tests rendered correctly after show less button clicked 1`] = `
<div>
  <li
    class="container"
  >
    <article
      class="article"
    >
      <header
        class="header"
      >
        <img
          alt="The Statue of Liberty's torch heads to new museum"
          class="image"
          src="https://cdn.cnn.com/cnnnext/dam/assets/181122102925-statue-of-liberty-crown-super-169.jpg"
        />
        <h2
          class="title"
        >
          <a
            class="link"
            href="/articlelist/181122102925-statue-of-liberty-crown"
          >
            The Statue of Liberty's torch heads to new museum
          </a>
        </h2>
      </header>
      <div
        class="wrapper"
      />
      <button
        class="button"
      >
        Show more
      </button>
    </article>
  </li>
</div>
`;

exports[`ArticleListItem tests rendered correctly after show more button clicked 1`] = `
<div>
  <li
    class="container"
  >
    <article
      class="article"
    >
      <header
        class="header"
      >
        <img
          alt="The Statue of Liberty's torch heads to new museum"
          class="image"
          src="https://cdn.cnn.com/cnnnext/dam/assets/181122102925-statue-of-liberty-crown-super-169.jpg"
        />
        <h2
          class="title"
        >
          <a
            class="link"
            href="/articlelist/181122102925-statue-of-liberty-crown"
          >
            The Statue of Liberty's torch heads to new museum
          </a>
        </h2>
      </header>
      <div
        class="wrapper"
      >
        <div
          class="text"
        >
          <p>
            The Statue of Liberty's original torch is getting a new home
          </p>
          <time
            class="time"
            datetime="2018-11-22T15:12:24.000Z"
          >
            November 22nd 2018, 7:12 am
          </time>
        </div>
      </div>
      <button
        class="button"
      >
        Show less
      </button>
    </article>
  </li>
</div>
`;
